deployment/cloud/k8/data-services/gemfire/gf-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8s-app: kube-dns
  name: kube-dns-lb
  namespace: kube-system
spec:
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    k8s-app: kube-dns
  sessionAffinity: None
  type: LoadBalancer
