deployment/cloud/k8/data-services/gemfire/gf-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: gf-contour-gateway-class
spec:
  controllerName: projectcontour.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gf-gateway
spec:
  gatewayClassName: gf-contour-gateway-class
  listeners:
    - name: gf-gateway-listener
      protocol: TLS
      port: 9000
      tls:
        mode: Passthrough
